Fixed z-index issue on the layer and tools menu icons when using IE9

--- a/media/common/css/menu_items.css
+++ b/media/common/css/menu_items.css
@@ -5,6 +5,7 @@
     -moz-user-select: none;
     -khtml-user-select: none;
     user-select: none;
+    z-index:11;
 }
 
 .menu_items a img {
